--- a/package.json
+++ b/package.json
@@ -20,13 +20,15 @@
     "@ark-ui/react": "2.2.3",
     "@heroicons/react": "2.1.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "usehooks-ts": "3.1.0"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "1.3.1",
     "@storybook/addon-essentials": "8.0.6",
     "@storybook/addon-interactions": "8.0.6",
     "@storybook/addon-links": "8.0.6",
+    "@storybook/addon-themes": "8.0.6",
     "@storybook/blocks": "8.0.6",
     "@storybook/react": "8.0.6",
     "@storybook/react-vite": "8.0.6",
