--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
   "dependencies": {
     "@ark-ui/react": "2.2.3",
     "@heroicons/react": "2.1.3",
+    "maplibre-gl": "4.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-map-gl": "7.1.7",
     "usehooks-ts": "3.1.0"
   },
   "devDependencies": {
