--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
   },
   "dependencies": {
     "@ark-ui/react": "2.2.3",
+    "@dnd-kit/core": "6.1.0",
+    "@dnd-kit/sortable": "8.0.0",
+    "@dnd-kit/utilities": "3.2.2",
     "@heroicons/react": "2.1.3",
     "maplibre-gl": "4.1.2",
     "react": "18.2.0",
