--- a/package.json
+++ b/package.json
@@ -65,5 +65,6 @@
     "typescript": "5.4.4",
     "vite": "5.2.8",
     "vitest": "1.4.0"
-  }
+  },
+  "packageManager": "pnpm@9.0.4+sha256.caa915eaae9d9aefccf50ee8aeda25a2f8684d8f9d5c6e367eaf176d97c1f89e"
 }
