--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@dnd-kit/sortable": "8.0.0",
     "@dnd-kit/utilities": "3.2.2",
     "@heroicons/react": "2.1.3",
+    "@maplibre/maplibre-gl-style-spec": "20.1.1",
     "maplibre-gl": "4.1.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -55,6 +56,7 @@
     "eslint-plugin-storybook": "0.8.0",
     "eslint-plugin-vitest": "0.5.3",
     "happy-dom": "14.7.1",
+    "plop": "4.0.1",
     "postcss": "8.4.38",
     "prettier": "3.2.5",
     "prettier-plugin-tailwindcss": "0.5.14",
