--- a/.prettierrc
+++ b/.prettierrc
@@ -4,11 +4,5 @@
     "tabWidth": 2,
     "semi": true,
     "singleQuote": true,
-    "endOfLine": "lf",
-    "plugins": [
-        "prettier-plugin-tailwindcss"
-    ],
-    "tailwindFunctions": [
-        "tv"
-    ]
+    "endOfLine": "lf"
 }
