--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@emotion/styled": "11.11.5",
     "@heroicons/react": "2.1.3",
     "@maplibre/maplibre-gl-style-spec": "20.1.1",
+    "@tanstack/react-query": "5.35.1",
     "framer-motion": "11.1.7",
     "maplibre-gl": "4.1.3",
     "react": "18.3.1",
