--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint": "eslint . --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build --stats-json",
@@ -24,6 +24,7 @@
     "@internationalized/number": "3.5.3",
     "@maplibre/maplibre-gl-style-spec": "20.3.1",
     "@tanstack/react-query": "5.55.4",
+    "@vitest/eslint-plugin": "1.1.0",
     "maplibre-gl": "4.7.0",
     "react": "18.3.1",
     "react-aria": "3.34.3",
@@ -35,6 +36,7 @@
   "devDependencies": {
     "@chromatic-com/storybook": "1.9.0",
     "@emotion/jest": "11.13.0",
+    "@eslint/js": "9.10.0",
     "@storybook/addon-essentials": "8.2.9",
     "@storybook/addon-interactions": "8.2.9",
     "@storybook/addon-links": "8.2.9",
@@ -55,15 +57,14 @@
     "@vitest/ui": "2.0.5",
     "chromatic": "11.7.1",
     "clsx": "2.1.1",
-    "eslint": "8.57.0",
+    "eslint": "9.10.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-import-resolver-typescript": "3.6.3",
     "eslint-plugin-import-x": "4.2.1",
-    "eslint-plugin-react-hooks": "4.6.2",
+    "eslint-plugin-react-hooks": "5.1.0-rc.0",
     "eslint-plugin-react-refresh": "0.4.11",
-    "eslint-plugin-storybook": "0.8.0",
     "eslint-plugin-unused-imports": "4.1.3",
-    "eslint-plugin-vitest": "0.5.4",
+    "globals": "15.9.0",
     "happy-dom": "15.7.3",
     "playwright": "1.47.0",
     "plop": "4.0.1",
@@ -73,6 +74,7 @@
     "tailwind-merge": "2.5.2",
     "tailwindcss": "4.0.0-alpha.23",
     "typescript": "5.5.4",
+    "typescript-eslint": "8.4.0",
     "vite": "5.4.3",
     "vitest": "2.0.5"
   },
