--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@heroicons/react": "2.1.5",
     "@internationalized/number": "3.5.3",
     "@maplibre/maplibre-gl-style-spec": "20.3.1",
+    "@react-aria/color": "3.0.0-rc.2",
+    "@react-stately/color": "3.7.2",
     "@tanstack/react-query": "5.56.2",
     "maplibre-gl": "4.7.0",
     "react": "19.0.0-rc-206df66e-20240912",
