--- a/package.json
+++ b/package.json
@@ -23,15 +23,19 @@
     "@heroicons/react": "2.1.5",
     "@internationalized/number": "3.5.3",
     "@maplibre/maplibre-gl-style-spec": "20.3.1",
+    "@monaco-editor/react": "4.6.0",
     "@react-aria/color": "3.0.0-rc.2",
     "@react-stately/color": "3.7.2",
+    "@shikijs/monaco": "1.17.6",
     "@tanstack/react-query": "5.56.2",
     "maplibre-gl": "4.7.0",
+    "monaco-editor": "0.51.0",
     "react": "19.0.0-rc-206df66e-20240912",
     "react-aria": "3.34.3",
     "react-dom": "19.0.0-rc-206df66e-20240912",
     "react-map-gl": "7.1.7",
     "react-stately": "3.32.2",
+    "shiki": "1.17.6",
     "usehooks-ts": "3.1.0"
   },
   "devDependencies": {
