--- a/package.json
+++ b/package.json
@@ -21,20 +21,21 @@
 		"@dnd-kit/sortable": "10.0.0",
 		"@dnd-kit/utilities": "3.2.2",
 		"@heroicons/react": "2.2.0",
-		"@internationalized/number": "3.6.0",
+		"@internationalized/number": "3.6.1",
 		"@maplibre/maplibre-gl-style-spec": "23.1.0",
 		"@monaco-editor/react": "4.7.0",
-		"@react-aria/color": "3.0.5",
-		"@react-stately/color": "3.8.3",
+		"@react-aria/color": "3.0.6",
+		"@react-stately/color": "3.8.4",
+		"@react-types/color": "3.0.4",
 		"@shikijs/monaco": "3.2.2",
-		"@tanstack/react-query": "5.72.2",
+		"@tanstack/react-query": "5.73.3",
 		"maplibre-gl": "5.3.0",
 		"monaco-editor": "0.52.2",
 		"react": "19.1.0",
-		"react-aria": "3.38.1",
+		"react-aria": "3.39.0",
 		"react-dom": "19.1.0",
 		"react-map-gl": "8.0.3",
-		"react-stately": "3.36.1",
+		"react-stately": "3.37.0",
 		"shiki": "3.2.2",
 		"usehooks-ts": "3.1.1"
 	},
@@ -52,7 +53,7 @@
 		"@storybook/test": "8.6.12",
 		"@tailwindcss/vite": "4.1.3",
 		"@testing-library/react": "16.3.0",
-		"@types/react": "19.1.0",
+		"@types/react": "19.1.1",
 		"@types/react-dom": "19.1.2",
 		"@vitejs/plugin-react": "4.3.4",
 		"@vitest/browser": "3.1.1",
