--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
 	"scripts": {
 		"dev": "vite",
 		"build": "tsc && vite build",
+		"build-no-tscheck": "vite build",
 		"lint": "eslint . --report-unused-disable-directives --max-warnings 0",
-		"preview": "vite preview",
+		"preview": "wrangler dev",
+		"deploy": "wrangler deploy",
 		"storybook": "storybook dev -p 6006",
 		"build-storybook": "storybook build --stats-json",
 		"vitest": "TZ=UTC vitest",
@@ -71,7 +73,8 @@
 		"tailwindcss": "4.1.3",
 		"typescript": "5.8.3",
 		"vite": "6.2.6",
-		"vitest": "3.1.1"
+		"vitest": "3.1.1",
+		"wrangler": "4.10.0"
 	},
 	"packageManager": "pnpm@10.8.0+sha512.0e82714d1b5b43c74610193cb20734897c1d00de89d0e18420aebc5977fa13d780a9cb05734624e81ebd81cc876cd464794850641c48b9544326b5622ca29971"
 }
