--- a/.github/workflows/test-check.yaml
+++ b/.github/workflows/test-check.yaml
@@ -14,7 +14,7 @@ jobs:
       - name: Set up Node
         uses: actions/setup-node@v4
         with:
-          node-version-file: .tool-versions
+          node-version-file: .node-version
 
       - name: Enable corepack
         run: corepack enable
