--- a/package.json
+++ b/package.json
@@ -17,74 +17,74 @@
     "chromatic": "chromatic"
   },
   "dependencies": {
-    "@dnd-kit/core": "6.1.0",
-    "@dnd-kit/sortable": "8.0.0",
+    "@dnd-kit/core": "6.3.1",
+    "@dnd-kit/sortable": "10.0.0",
     "@dnd-kit/utilities": "3.2.2",
-    "@heroicons/react": "2.1.5",
-    "@internationalized/number": "3.5.3",
-    "@maplibre/maplibre-gl-style-spec": "20.3.1",
-    "@monaco-editor/react": "4.6.0",
-    "@react-aria/color": "3.0.0-rc.2",
-    "@react-stately/color": "3.7.2",
-    "@shikijs/monaco": "1.17.6",
-    "@tanstack/react-query": "5.56.2",
-    "maplibre-gl": "4.7.0",
-    "monaco-editor": "0.51.0",
-    "react": "19.0.0-rc-206df66e-20240912",
-    "react-aria": "3.34.3",
-    "react-dom": "19.0.0-rc-206df66e-20240912",
-    "react-map-gl": "7.1.7",
-    "react-stately": "3.32.2",
-    "shiki": "1.17.6",
-    "usehooks-ts": "3.1.0"
+    "@heroicons/react": "2.2.0",
+    "@internationalized/number": "3.6.0",
+    "@maplibre/maplibre-gl-style-spec": "23.1.0",
+    "@monaco-editor/react": "4.7.0",
+    "@react-aria/color": "3.0.3",
+    "@react-stately/color": "3.8.2",
+    "@shikijs/monaco": "2.4.1",
+    "@tanstack/react-query": "5.66.3",
+    "maplibre-gl": "5.1.0",
+    "monaco-editor": "0.52.2",
+    "react": "19.0.0",
+    "react-aria": "3.37.0",
+    "react-dom": "19.0.0",
+    "react-map-gl": "8.0.1",
+    "react-stately": "3.35.0",
+    "shiki": "2.4.1",
+    "usehooks-ts": "3.1.1"
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "2.0.2",
+    "@chromatic-com/storybook": "3.2.4",
     "@emotion/jest": "11.13.0",
-    "@eslint/js": "9.10.0",
-    "@storybook/addon-essentials": "8.3.0",
-    "@storybook/addon-interactions": "8.3.0",
-    "@storybook/addon-links": "8.3.0",
-    "@storybook/addon-themes": "8.3.0",
-    "@storybook/blocks": "8.3.0",
-    "@storybook/react": "8.3.0",
-    "@storybook/react-vite": "8.3.0",
-    "@storybook/test": "8.3.0",
-    "@tailwindcss/vite": "4.0.0-alpha.23",
-    "@testing-library/react": "16.0.1",
-    "@types/react": "18.3.5",
-    "@types/react-dom": "18.3.0",
-    "@typescript-eslint/eslint-plugin": "8.5.0",
-    "@typescript-eslint/parser": "8.5.0",
-    "@vitejs/plugin-react": "4.3.1",
-    "@vitest/browser": "2.1.1",
-    "@vitest/coverage-v8": "2.1.1",
-    "@vitest/eslint-plugin": "1.1.4",
-    "@vitest/ui": "2.1.1",
-    "babel-plugin-react-compiler": "0.0.0-experimental-de2cfda-20240912",
-    "chromatic": "11.10.2",
+    "@eslint/js": "9.20.0",
+    "@storybook/addon-essentials": "8.5.6",
+    "@storybook/addon-interactions": "8.5.6",
+    "@storybook/addon-links": "8.5.6",
+    "@storybook/addon-themes": "8.5.6",
+    "@storybook/blocks": "8.5.6",
+    "@storybook/react": "8.5.6",
+    "@storybook/react-vite": "8.5.6",
+    "@storybook/test": "8.5.6",
+    "@tailwindcss/vite": "4.0.6",
+    "@testing-library/react": "16.2.0",
+    "@types/react": "19.0.9",
+    "@types/react-dom": "19.0.3",
+    "@typescript-eslint/eslint-plugin": "8.24.0",
+    "@typescript-eslint/parser": "8.24.0",
+    "@vitejs/plugin-react": "4.3.4",
+    "@vitest/browser": "3.0.5",
+    "@vitest/coverage-v8": "3.0.5",
+    "@vitest/eslint-plugin": "1.1.31",
+    "@vitest/ui": "3.0.5",
+    "babel-plugin-react-compiler": "19.0.0-beta-30d8a17-20250209",
+    "chromatic": "11.25.2",
     "clsx": "2.1.1",
-    "eslint": "9.10.0",
-    "eslint-config-prettier": "9.1.0",
-    "eslint-import-resolver-typescript": "3.6.3",
-    "eslint-plugin-import-x": "4.2.1",
-    "eslint-plugin-react-compiler": "0.0.0-experimental-75b9fd4-20240912",
-    "eslint-plugin-react-hooks": "5.1.0-rc.0",
-    "eslint-plugin-react-refresh": "0.4.12",
+    "eslint": "9.20.1",
+    "eslint-config-prettier": "10.0.1",
+    "eslint-import-resolver-typescript": "3.8.0",
+    "eslint-plugin-import-x": "4.6.1",
+    "eslint-plugin-react-compiler": "19.0.0-beta-30d8a17-20250209",
+    "eslint-plugin-react-hooks": "5.1.0",
+    "eslint-plugin-react-refresh": "0.4.19",
     "eslint-plugin-unused-imports": "4.1.4",
-    "globals": "15.9.0",
-    "happy-dom": "15.7.4",
-    "playwright": "1.47.1",
+    "globals": "15.15.0",
+    "happy-dom": "17.1.0",
+    "playwright": "1.50.1",
     "plop": "4.0.1",
-    "prettier": "3.3.3",
-    "prettier-plugin-tailwindcss": "0.6.6",
-    "storybook": "8.3.0",
-    "tailwind-merge": "2.5.2",
-    "tailwindcss": "4.0.0-alpha.23",
-    "typescript": "5.6.2",
-    "typescript-eslint": "8.5.0",
-    "vite": "5.4.5",
-    "vitest": "2.1.1"
+    "prettier": "3.5.1",
+    "prettier-plugin-tailwindcss": "0.6.11",
+    "storybook": "8.5.6",
+    "tailwind-merge": "3.0.1",
+    "tailwindcss": "4.0.6",
+    "typescript": "5.7.3",
+    "typescript-eslint": "8.24.0",
+    "vite": "6.1.0",
+    "vitest": "3.0.5"
   },
   "packageManager": "pnpm@9.0.6+sha256.0624e30eff866cdeb363b15061bdb7fd9425b17bc1bb42c22f5f4efdea21f6b3"
 }
